<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/medium_spacing"
    android:gravity="center_horizontal|top">
    <ImageView
        android:layout_width="@dimen/folder_name_width"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_folder"
        android:contentDescription="@string/folder"/>
    <TextView
        android:id="@+id/folder_name"
        android:layout_width="@dimen/folder_name_width"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp_video"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/folder_count"
        android:layout_width="@dimen/folder_name_width"
        android:layout_height="wrap_content"
        android:text="@string/_100_video"
        android:textAlignment="center"
        android:textSize="@dimen/extra_small_text"/>
</LinearLayout>