<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="0dp"
    app:cardBackgroundColor="?attr/colorOnSurface"
    app:cardCornerRadius="@dimen/extra_small_spacing">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/small_spacing"
            android:paddingVertical="@dimen/large_spacing">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_spacing"
                android:layout_marginBottom="@dimen/large_spacing"
                android:text="@string/panchayat"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/medium_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/medium_text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/file"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/fileName"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/relative_path"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/relativePath"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/total_size"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/size"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@color/grey"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/date_created"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/date_taken"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/last_modified"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/last_modified"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/large_spacing"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/medium_text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/small_spacing">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/resolution"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/resolution"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_spacing"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textColor="@color/grey"/>
                    <Space
                        android:layout_width="@dimen/medium_spacing"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/length"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey"
                        tools:text="@string/_100_video"
                        android:textAlignment="textStart"/>
                </LinearLayout>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/large_spacing"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/small_spacing"
                    android:text="@string/ok"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="@dimen/small_text" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>