<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/medium_spacing"
    android:elevation="@dimen/extra_small_spacing"
    android:background="?attr/colorOnSurface"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/selected_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/colorOnSecondary"
        tools:text="@string/panchayat"
        android:textSize="@dimen/small_text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_spacing"
        app:layout_constraintTop_toBottomOf="@id/selected_item_title"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start|top">
        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:paddingHorizontal="@dimen/small_spacing"
            android:paddingVertical="@dimen/medium_spacing"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share__1"/>
            <Space
                android:layout_width="@dimen/large_spacing"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/share"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:paddingHorizontal="@dimen/small_spacing"
            android:paddingVertical="@dimen/medium_spacing"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rename"/>
            <Space
                android:layout_width="@dimen/large_spacing"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/rename"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:paddingHorizontal="@dimen/small_spacing"
            android:paddingVertical="@dimen/medium_spacing"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info"/>
            <Space
                android:layout_width="@dimen/large_spacing"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/properties"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|start"
            android:paddingHorizontal="@dimen/small_spacing"
            android:paddingVertical="@dimen/medium_spacing"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"/>
            <Space
                android:layout_width="@dimen/large_spacing"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="?attr/colorOnSecondary"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>