<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/folder_name_width"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/small_spacing"
        app:cardElevation="0dp">


        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />

        <RelativeLayout
            android:id="@id/selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="?attr/colorPrimary"
            android:padding="@dimen/small_spacing"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check_circle" />
        </RelativeLayout>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:background="?attr/colorSurface"
            android:paddingHorizontal="@dimen/extra_small_spacing"
            android:text="@string/_04_45"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/extra_small_text" />
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_spacing" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:layout_toStartOf="@id/more"
            android:text="@string/hatim_15"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/small_text" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_more_vert" />
    </RelativeLayout>
</LinearLayout>